--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -37,7 +37,7 @@ cmake_minimum_required ( VERSION 2.8 )
 project( logging CXX C )
 
 ### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../CMake/Modules" )
+set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 ## Define all search packages
 include ( SearchPackages/Logging ) 
@@ -55,6 +55,12 @@ endforeach ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
 ### Include Compiler Flags
 include ( SetBuildFlags )
 include ( SetCPPFlags )
+
+set ( SCAI_LOGGING_LIBRARY common 
+      CACHE FILEPATH "logging library" )
+
+set ( SCAI_LOGGING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} 
+      CACHE PATH "logging include directory" )
 
 ## Project System-Include
 include_directories ( ../.. )
@@ -95,5 +101,8 @@ install ( FILES ${HPP_HEADERS} DESTINATION include/scai/logging )
 ## install library.hpp
 install ( FILES ../logging.hpp DESTINATION include/scai )
 
-## add custum target distClean
-include ( DistClean )
+## add custum target distClean, but only if this project is not included
+
+if ( CMAKE_SOURCE_DIR EQUAL CMAKE_CURRENT_SOURCE_DIR )
+    add_custom_target ( distclean )
+endif ()
