--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -37,7 +37,7 @@ cmake_minimum_required ( VERSION 2.8 )
 project( tracing CXX C )
 
 ### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../CMake/Modules" )
+set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 ## Define all search packages
 include ( SearchPackages/Tracing ) 
@@ -60,6 +60,12 @@ include ( Package/CUDA )
 ### Include Compiler Flags
 include ( SetBuildFlags )
 include ( SetCPPFlags )
+
+set ( SCAI_TRACING_LIBRARY common 
+      CACHE FILEPATH "tracing library" )
+
+set ( SCAI_TRACING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} 
+      CACHE PATH "tracing include directory" )
 
 ## Project System-Include
 include_directories ( ../.. )
@@ -128,5 +134,8 @@ endif( )
 ## install library.hpp
 install ( FILES ../tracing.hpp DESTINATION include/scai )
 
-## add custum target distClean
-include ( DistClean )
+## add custum target distClean, but only if this project is not included
+
+if ( CMAKE_SOURCE_DIR EQUAL CMAKE_CURRENT_SOURCE_DIR )
+    add_custom_target ( distclean )
+endif ()
