--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -37,7 +37,7 @@ cmake_minimum_required ( VERSION 2.8 )
 project( tasking CXX C )
 
 ### Set Module Path
-set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../CMake/Modules" )
+set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
 ## Define all search packages
 include ( SearchPackages/Tasking ) 
@@ -55,6 +55,12 @@ endforeach ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
 ### Include Compiler Flags
 include ( SetBuildFlags )
 include ( SetCPPFlags )
+
+set ( SCAI_TASKING_LIBRARY common 
+      CACHE FILEPATH "tasking library" )
+
+set ( SCAI_TASKING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} 
+      CACHE PATH "tasking include directory" )
 
 ## Project System-Include
 include_directories ( ../.. )
@@ -108,5 +114,8 @@ install ( FILES ${HPP_HEADERS} DESTINATION include/scai/tasking )
 ## install library.hpp
 install ( FILES ../tasking.hpp DESTINATION include/scai )
 
-## add custum target distClean
-include ( DistClean )
+## add custum target distClean, but only if this project is not included
+
+if ( CMAKE_SOURCE_DIR EQUAL CMAKE_CURRENT_SOURCE_DIR )
+    add_custom_target ( distclean )
+endif ()
