--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -1,5 +1,5 @@
 ###
- # @file common/CMakeLists.txt
+ # @file scai/common/CMakeLists.txt
  #
  # @license
  # Copyright (c) 2009-2015
@@ -42,12 +42,12 @@ set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../CMake/Modules" )
 ## Define all search packages
 include ( InternalDependencies )
 include ( SearchPackages/Common )
-
+	
 # Find required packages
 foreach    ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
     find_package ( ${PACKAGE_TO_FIND} ${LAMA_FIND_PACKAGE_FLAGS} REQUIRED )
 endforeach ( PACKAGE_TO_FIND ${REQUIRED_PACKAGES_TO_FIND} )
-
+	
 # Find optional packages
 foreach    ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
     find_package ( ${PACKAGE_TO_FIND} ${LAMA_FIND_PACKAGE_FLAGS} )
@@ -55,13 +55,26 @@ endforeach ( PACKAGE_TO_FIND ${OPTIONAL_PACKAGES_TO_FIND} )
 
 include ( Functions/checkValue )
 include ( Functions/setAndCheckCache )
-
+	
 include ( Package/CUDA )
+	
+if    ( NOT SCAI_COMPLETE_BUILD )
+	
+	### Include Compiler Flags
+	include ( SetBuildFlags )
+	include ( SetCPPFlags )
+	include ( SetNVCCFlags )
 
-### Include Compiler Flags
-include ( SetBuildFlags )
-include ( SetCPPFlags )
-include ( SetNVCCFlags )
+else  ( NOT SCAI_COMPLETE_BUILD )
+
+	add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
+
+	set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ADDITIONAL_CXX_FLAGS}")
+	set ( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${ADDITIONAL_CXX_FLAGS_RELEASE} " )
+	set ( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
+	set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ADDITIONAL_LINKER_FLAGS} " )
+
+endif ( NOT SCAI_COMPLETE_BUILD )
 
 ## Project System-Include
 include_directories ( ../.. )
